swift-package-factory/Examples/InvalidExamples/InvalidMatrix.spf
func foo() 
{
    @basis 
    let variables:[Never] = [x, y, z]

    // this works because this is a declaration
    @matrix(__variable__: variables)
    var __variable__:Int = 0

    #if NEVER 
    for _:Int in 0 ..< 10 
    {
        // this does not work, because this is 
        // not a declaration, and @matrix is 
        // for declarations only
        @matrix(__variable__: variables)
        __variable__ += 1
    }
    #endif
}